--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,9 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+notifications:
+  email:
+    recipients:
+      - bret@atlantisflight.org
+    on_success: change
+    on_failure: always
