--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "sch",
+  "name": "schyntax",
   "description": "A simple utility for parsing schedule strings, and finding the next scheduled event time.",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "author": "Bret Copeland <bret@atlantisflight.org>",
   "main": "./lib/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bretcope/sch.git"
+    "url": "https://github.com/schyntax/js-schyntax.git"
   },
   "dependencies": {},
   "devDependencies": {
